Add compatibility for 'kirkstone' Yocto branch

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,4 +7,4 @@ BBFILE_COLLECTIONS += "carles"
 BBFILE_PATTERN_carles = "^${LAYERDIR}/"
 BBFILE_PRIORITY_carles = "6"
 
-LAYERSERIES_COMPAT_carles = "walnascar"
+LAYERSERIES_COMPAT_carles = "kirkstone walnascar"
