Create 'core-image-carles-everest' and 'carles-everest' distro

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,10 +1,13 @@
 # meta-carles/conf/layer.conf
-
+# We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb"
+
+# We have recipes-* directories, add to BBFILES
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "carles"
 BBFILE_PATTERN_carles = "^${LAYERDIR}/"
 BBFILE_PRIORITY_carles = "6"
 
-LAYERSERIES_COMPAT_carles = "kirkstone walnascar"
+LAYERSERIES_COMPAT_carles = "kirkstone"
