Update 'layer.conf' and 'evert-firmware-cm-everest.bb' with new requirements

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,5 @@ BBFILE_COLLECTIONS += "carles"
 BBFILE_PATTERN_carles = "^${LAYERDIR}/"
 BBFILE_PRIORITY_carles = "6"
 
+LAYERDEPENDS_carles = "meta-everest"
 LAYERSERIES_COMPAT_carles = "kirkstone"
