--- a/conf/distro/carles-everest.conf
+++ b/conf/distro/carles-everest.conf
@@ -6,3 +6,8 @@ DISTRO_NAME = "Carles EVerest Distro"
 DISTRO_VERSION = "1.0"
 DISTRO_CODENAME = "volcano"
 
+# Enable systemd as the init manager
+DISTRO_FEATURES:append = " systemd"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+VIRTUAL-RUNTIME_initscripts = ""
+
