feat(PMU-392): Adjustments to enable 'SSH' on startup

--- a/recipes-core/wifi-config/files/wpa_supplicant.conf
+++ b/recipes-core/wifi-config/files/wpa_supplicant.conf
@@ -3,6 +3,6 @@ ctrl_interface_group=0
 update_config=1
 
 network={
-    ssid="Iguana.cat-E96E79"
-    psk="b26817f40d"
+    ssid="YourSSID"
+    psk="YourPSK"
 }
